tests/negative/gold/indent1_test.gold
tests/negative/indent1_test.toit:8:9: error: All expressions in a sequence must be indented the same way
        break
        ^~~~~
Compilation failed.
